# leanUI

./: .gitignore  CMakeLists.txt  README.md  lean_ui.c  lean_ui.h
.github/workflows/: cmake-multi-platform.yml
test/: test.c
